--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "babel-jest": "^24.8.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
+    "react-dom": "^16.8.6",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
